# Agent-First-Organization

./: .coverage  .coverage.Yongwhan-MacBook-Pro.local.9194.XYFAiGkx  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  PROVIDER_SELECTION_SUMMARY.md  README.md  create.py  eval.py  model_api.py  pyproject.toml  pytest.ini  requirements.txt  run.py  test_api_keys.py
.github/: CODEOWNERS  GITHUB.md  README.md  pull_request_template.md
.github/actions/: ACTION.md  README.md  run-coverage-tests.yml  update-badge.yml  upload-coverage-report.yml
.github/workflows/: README.md  WORFKLOW.md  lint.yml  nightly-regression.yml  pr-check.yml  pr-code-linting.yml  pr-diff-coverage-check.yml  pr-taskgraph-validation.yml  release.yml  reusable-diff-based-test-coverage.yml  reusable-display-coverage-comment.yml  reusable-readme-coverage-badge-update.yml  reusable-ruff-code-linting.yml  reusable-run-coverage-tests.yml  reusable-send-email-notification.yml  reusable-send-notifications.yml  reusable-taskgraph-generation-validation.yml  reusable-update-badge.yml  reusable-upload-coverage-report.yml  test-coverage-regression.yml  test-coverage.yml  test-diff-coverage.yml  test-resources.yml
arklex/: __init__.py  exceptions.py  main.py  types.py
arklex/env/: entities.py  env.py  prompts.py  resource_map.py
arklex/evaluation/: __init__.py  build_user_profiles.py  chatgpt_utils.py  extract_conversation_info.py  get_documents.py  simulate_first_pass_convos.py  simulate_second_pass_convos.py  user_attributes.json
arklex/memory/: __init__.py  core.py  prompts.py
arklex/middleware/: logging_middleware.py
arklex/optimization/: __init__.py
arklex/orchestrator/: README.md  __init__.py  orchestrator.py  post_process.py  prompts.py  task_graph.py
arklex/types/: model_types.py  resource_types.py  stream_types.py
arklex/utils/: exceptions.py  graph_state.py  loader.py  logging_config.py  logging_utils.py  model_config.py  model_provider_config.py  mysql.py  provider_utils.py  redis.py  slot.py  trace.py  utils.py
benchmark/tau_bench/: __init__.py  auto_error_identification.py  run.py  setup.py  tau_bench_eval.py  tau_bench_result_analysis.py  tau_types.py
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  EXAMPLES.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: MessageState.md  Quickstart.md  Tools.md  intro.md
examples/: booking_assistant_config.json  booking_assistant_tool_config.json  customer_service_config.json  roleplay.json
examples/acuity/: taskgraph.json
examples/calendar/: taskgraph.json  test.py  test_cases.json
examples/customer_service/: chunked_documents.pkl  customer_service_config.json  documents.pkl  taskgraph.json
examples/hitl_server/: conftest.py  taskgraph.json  test.py  test_cases.json  test_cases_post_process.json  test_post_process.py
examples/hubspot/: taskgraph.json  test.py  test_cases.json
examples/milvus_filter/: taskgraph.json
examples/multi_agent/: multi_agent.md  taskgraph.json
examples/multiple_choice/: taskgraph.json  test.py
examples/shopify/: shopify_config.json  taskgraph.json  test.py  test_cases.json  user_attr_api.py
examples/syllabus_assistant/: syllabus_assistant_config.json
examples/test/: chunked_documents.pkl  config.json  documents.pkl  taskgraph.json  url_3644ba2b586c58564ddb218f2741332d.html
project_improvements/: ARCHITECTURE_IMPROVEMENTS.md  CODE_QUALITY_IMPROVEMENTS.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  DEPLOYMENT_IMPROVEMENTS.md  DOCUMENTATION_IMPROVEMENTS.md  PERFORMANCE_IMPROVEMENTS.md  SECURITY_IMPROVEMENTS.md  TECHNICAL_DEBT_ROADMAP.md  TESTING_IMPROVEMENTS.md
test_logs/: arklex_test.log.1
tests/: README.md  __init__.py  conftest.py  test_resources.py
tests/data/: hubspot_tool_testcases.json  mc_worker_taskgraph.json  mc_worker_testcases.json  message_worker_taskgraph.json  shopify_tool_taskgraph.json  shopify_tool_testcases.json
tests/e2e/: test_model_provider_e2e.py
tests/env/: test_env.py  test_nested_graph.py  test_openai_agent.py  test_prompts.py
tests/evaluation/: test_build_user_profiles.py  test_chatgpt_utils.py  test_chatgpt_utils_simple.py  test_extract_conversation_info.py  test_get_documents.py  test_simulate_first_pass_convos.py  test_simulate_second_pass_convos.py
tests/integration/: README.md  conftest.py  integration_test_utils.py  run_hitl_tests.py  run_integration_tests.sh  test_hitl_server.py  test_hubspot.py  test_hubspot_tools.py  test_milvus_filter.py  test_model_provider_selection.py  test_shopify.py  test_shopify_tools.py  test_taskgraph_full_flow.py  test_utils.py
tests/main/: test_main.py
tests/memory/: test_core.py
tests/middleware/: test_logging_middleware.py
tests/orchestrator/: test_orchestrator.py  (+1 more)
(+431 files in other folders)
